--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.3",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^4.1.0",
     "next": "11.0.1",
+    "next-auth": "^3.27.3",
+    "next-sanity": "^0.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-indiana-drag-scroll": "^2.0.1",
+    "react-responsive-carousel": "^3.2.20",
+    "react-word-limit": "^1.0.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
